# domscribe

./: .gitignore  PLAN.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
domscribe/: __init__.py  ast_utils.py  converter.py  dom_utils.py  html_to_markdown_ast.py  markdown_ast_to_string.py  markdown_types.py  url_utils.py
tests/: test_converter.py
